--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                     for everyone</p>
                 <button class="virtual-btn">Consult today</button>
             </div>
-            <div class="virtual-img"> <img src="./img/illustration.jpg" alt=""></div>
+            <div class="virtual-img"> <img class="img1" src="./img/illustration.jpg" alt=""></div>
         </div>
         <div class="services">
             <h6 class="services-title">Our services</h6>
@@ -83,7 +83,7 @@
         </div>
         <button class="services-btn">Learn more</button>
         <div class="virtual">
-            <div class="virtual-img"> <img src="./img/trafalgar-illustration sec02 1.png" alt=""></div>
+            <div class="virtual-img"> <img class="img1" src="./img/trafalgar-illustration sec02 1.png" alt=""></div>
             <div class="virtual-about">
                 <h6 class="virtual-title">Leading healthcare providers
                 </h6>
@@ -106,13 +106,13 @@
                 </p>
                 <button class="services-btn">Download</button>
             </div>
-            <div class="virtual-img"> <img src="./img/app-illustration.png" alt=""></div>
+            <div class="virtual-img"> <img class="img1" src="./img/app-illustration.png" alt=""></div>
         </div>
         <div class="customer">
             <div class="customer-title">What our customer are saying</div>
             <div class="customer-about">
                 <div class="customer2">
-                    <div class="customer-img"> <img src="./img/Mask Group (17).png" alt=""></div>
+                    <div class="customer-img"> <img  src="./img/Mask Group (17).png" alt=""></div>
                     <div class="customeer-name">
                         <h6 class="customer-title2">Edward Newgate</h6>
                         <h6 class="customer-title3">Founder Circle</h6>
